Included ggp Project and updated projects and index to match Updated contact with business email Updated Index text to be more descriptive and professional

--- a/portfolio/includes/nav2.html
+++ b/portfolio/includes/nav2.html
@@ -5,6 +5,8 @@
 		<li id="1" >
 		<a href="../projects.shtml">Projects</a>
 			<ul class="parentNav">
+				<li><a href="gameGraphics.shtml">Direct-X Engine</a></li>
+
 				<li><a href="crossbow.shtml">3D CrossBow</a></li>
 				<li><a href="floorIsLava.shtml">The Floor is Lava</a></li>
 
